--- a/.github/workflows/Flippy's kernel.yml
+++ b/.github/workflows/Flippy's kernel.yml
@@ -5,7 +5,7 @@
 # Source code repository: https://github.com/coolsnowwolf/lede / Branch: master
 #========================================================================================================================
 
-name: Build OpenWrt lede
+name: Build OpenWrt lede with Flippy's kernel
 
 on:
   repository_dispatch:
