--- a/.github/workflows/use-releases-file-to-packaging.yml
+++ b/.github/workflows/use-releases-file-to-packaging.yml
@@ -17,7 +17,7 @@ on:
       openwrt_soc:
         description: "Choose Amlogic SoC."
         required: false
-        default: "all"
+        default: "s905d"
       openwrt_kernel:
         description: "Choose kernel version."
         required: false
