--- a/.github/workflows/build-openwrt-lede.yml
+++ b/.github/workflows/build-openwrt-lede.yml
@@ -113,6 +113,7 @@ jobs:
           openwrt_path: openwrt/bin/targets/*/*/*rootfs.tar.gz
           openwrt_soc: ${{ github.event.inputs.openwrt_soc }}
           openwrt_kernel: ${{ github.event.inputs.openwrt_kernel }}
+          auto_kernel: true
           openwrt_size: ${{ github.event.inputs.openwrt_size }}
 
       - name: Upload OpenWrt Firmware to Release
@@ -134,7 +135,7 @@ jobs:
             Install to EMMC: Login to OpenWrt → System → Amlogic Service → Install OpenWrt
 
       - name: Upload OpenWrt Firmware to WeTransfer
-        if: steps.build.outputs.status == 'success' && env.UPLOAD_WETRANSFER == 'true' && !cancelled()
+        if: steps.build.outputs.status == 'success' && !cancelled()
         run: |
           curl -fsSL git.io/file-transfer | sh
           ./transfer wet -s -p 16 --no-progress ${{ env.FILEPATH }}/{openwrt_s9xxx_*,openwrt_n1_*} 2>&1 | tee wetransfer.log
