--- a/.github/workflows/Flippy's kernel.yml
+++ b/.github/workflows/Flippy's kernel.yml
@@ -33,6 +33,7 @@ env:
   CONFIG_FILE: router-config/lede-master/.config
   DIY_P1_SH: router-config/lede-master/diy-part1.sh
   DIY_P2_SH: router-config/lede-master/diy-part2.sh
+  UPLOAD_WETRANSFER: true
   TZ: Asia/Shanghai
 
 jobs:
